# music-killer

./: .gitignore  README.md
music-killer-android/: build.gradle.kts  settings.gradle.kts  update.json
music-killer-android/app/: build.gradle.kts
music-killer-android/app/src/main/: AndroidManifest.xml
music-killer-android/app/src/main/assets/: litepal.xml
music-killer-android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
music-killer-android/app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
music-killer-android/app/src/main/res/color/: icon_favorite.xml  tv_music_artist.xml  tv_music_name.xml
music-killer-android/app/src/main/res/drawable/: baseline_arrow_right_alt_24.xml  baseline_chevron_right_24.xml  baseline_close_24.xml  baseline_download_24.xml  baseline_favorite_border_24.xml  baseline_high_quality_24.xml  baseline_history_24.xml  baseline_loop_24.xml  baseline_lyrics_24.xml  baseline_open_in_full_24.xml  baseline_pause_24.xml  baseline_play_arrow_24.xml  baseline_playlist_add_24.xml  baseline_search_24.xml  baseline_settings_24.xml  baseline_shuffle_24.xml  bg_corner_top.xml  ic_empty.xml  ic_favorite.xml  (+2 more)
music-killer-android/gradle/: libs.versions.toml
music-killer-android/gradle/wrapper/: gradle-wrapper.properties
music-killer-java/: pom.xml
music-killer-java/music-killer-common/: pom.xml
music-killer-java/music-killer-pojo/: pom.xml
music-killer-java/music-killer-server/: pom.xml
music-killer-java/music-killer-server/src/main/resources/: application-dev.yml  application.yml
(+240 files in other folders)
